[metadata]
name = toncenter
version = 0.0.3
author = witer33
author_email = dev@witer33.com
description = Toncenter API Python3 async wrap.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/witer33/toncenter
project_urls =
    Bug Tracker = https://github.com/witer33/toncenter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src